update PA3: use our decaf.lowlevel